--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Wine House</title>
+  <title>Wine House 🍷</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,9 +20,31 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/logo.png" />
 </head>
 
 <body>
+
+<div class="container">
+  <div class="wrapper">
+    <section class="section-1">
+      <div class="section-wrapper section-1-wrapper"></div>
+        <div class="section-1-heading-wrapper">
+          <h1 class="section-1-heading">The best wines around the world</h1>
+        </div>
+
+
+
+    </section>
+    <section class="section-2"><div class="section-wrapper section-2-wrapper"></div></section>
+    <section class="section-3"><div class="section-wrapper section-3-wrapper"></div></section>
+    <section class="section-4"><div class="section-wrapper section-4-wrapper"></div></section>
+    <section class="section-5"><div class="section-wrapper section-5-wrapper"></div></section>
+  </div>
+</div>
+
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
