--- a/index.html
+++ b/index.html
@@ -28,15 +28,13 @@
 <body>
 
 <div class="container">
-  <div class="wrapper">
-    <section class="section-1">
-      <div class="section-wrapper section-1-wrapper"></div>
-        <div class="section-1-heading-wrapper">
-          <h1 class="section-1-heading">The best wines around the world</h1>
-        </div>
-
-
-
+<div class="wrapper">
+  <section class="section-1">
+    <div class="section-wrapper section-1-wrapper">
+      <div class="section-1-heading-wrapper">
+        <h1 class="section-1-heading">The best wines around the world</h1>
+      </div>
+    </div>
     </section>
     <section class="section-2"><div class="section-wrapper section-2-wrapper"></div></section>
     <section class="section-3"><div class="section-wrapper section-3-wrapper"></div></section>
@@ -44,7 +42,7 @@
     <section class="section-5"><div class="section-wrapper section-5-wrapper"></div></section>
   </div>
 </div>
-
+</div>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
@@ -52,5 +50,5 @@
   <script src="js/main.js"></script>
 
 
-
+</body>
 </html>
