--- a/index.html
+++ b/index.html
@@ -28,16 +28,45 @@
 <body>
 
 <div class="container">
-<div class="wrapper">
-  <section class="section-1">
-    <div class="section-wrapper section-1-wrapper">
-      <div class="section-1-heading-wrapper">
-        <h1 class="section-1-heading">The best wines around the world</h1>
+  <div class="wrapper">
+    <section class="section-1">
+      <div class="section-wrapper section-1-wrapper">
+        <div class="section-1-heading-wrapper">
+          <h1 class="section-1-heading">The best wines around the world</h1>
+        </div>
       </div>
-    </div>
     </section>
-    <section class="section-2"><div class="section-wrapper section-2-wrapper"></div></section>
-    <section class="section-3"><div class="section-wrapper section-3-wrapper"></div></section>
+    <section class="section-2">
+      <div class="section-wrapper section-2-wrapper">
+        <div class="sale">
+          <img src="images/bag.png" alt="Sale Bag" class="sale-bag" />
+          <button class="sale-btn">order now!</button>
+        </div>
+        <img
+          src="images/wine-bottle.png"
+          alt="Wine Bottle"
+          class="wine-bottle"
+        />
+      </div>
+    </section>
+    <section class="section-3">
+      <div class="section-wrapper section-3-wrapper">
+        <h1 class="section-3-heading">the best quality</h1>
+        <img src="images/frame.png" alt="Grapes Frame" class="frame-img" />
+        <img src="images/grapes.png" alt="Grapes" class="grapes-img" />
+      </div>
+    </section>
+    <section class="section-4">
+      <div class="section-wrapper section-4-wrapper">
+        <div class="section-4-bg"></div>
+        <h1 class="section-4-heading">Newly Released Wines</h1>
+        <img
+          src="images/section-4-bg.jpg"
+          alt="New Wines"
+          class="new-wines-img"
+        />
+      </div>
+    </section>
     <section class="section-4"><div class="section-wrapper section-4-wrapper"></div></section>
     <section class="section-5"><div class="section-wrapper section-5-wrapper"></div></section>
   </div>
