--- a/index.html
+++ b/index.html
@@ -67,8 +67,31 @@
         />
       </div>
     </section>
-    <section class="section-4"><div class="section-wrapper section-4-wrapper"></div></section>
-    <section class="section-5"><div class="section-wrapper section-5-wrapper"></div></section>
+    <section class="section-4"><div class="section-wrapper section-4-wrapper">
+      <div class="section-4-bg"></div>
+      <h1 class="section-4-heading">Newly Released Wines</h1>
+      <img src="images/section-4-bg.jpg" alt="New Wines" class="new-wines-img">
+    </div></section>
+    <section class="section-5"><div class="section-wrapper section-5-wrapper">
+      <ul class="footer-list">
+        <li>Contact</li>
+        <li>NY</li>
+        <li>1323 Stainley Avenue</li>
+        <li>Open daily</li>
+        <li>By appointment only</li>
+      </ul>
+      <img src="images/footer-img.png" class="footer-img" alt="">
+
+      <ul class="footer-list">
+        <li>Connect</li>
+        <li>PN: 432342343</li>
+        <li>MN: 543545345</li>
+        <li>email@winehouse.com</li>
+        <li>Join our mailing list</li>
+      </ul>
+      <p class="copyright">Copyright &copy; Rokas Rudzianskas All rights reserved</p>
+
+    </div></section>
   </div>
 </div>
 </div>
