--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 <body>
 
 <div class="container">
+  <div class="navbar">
+    <a href="" class="logo-link">
+      <img src="images/logo.png" alt="Logo" class="logo">
+    </a>
+    <nav class="nav-list">
+      <a href="#" class="nav-link">Home</a>
+      <a href="#" class="nav-link">Vineyeards</a>
+      <a href="#" class="nav-link">Grapes</a>
+      <a href="#" class="nav-link">Wine</a>
+      <a href="#" class="nav-link">Contact</a>
+    </nav>
+  </div>
   <div class="wrapper">
     <section class="section-1">
       <div class="section-wrapper section-1-wrapper">
