--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="container">
   <div class="navbar">
     <a href="" class="logo-link">
-      <img src="images/logo.png" alt="Logo" class="logo">
+      <img src="images/logo.png" class="img-wine" alt="Logo" class="logo">
     </a>
     <nav class="nav-list">
       <a href="#" class="nav-link">Home</a>
@@ -40,6 +40,27 @@
       <a href="#" class="nav-link">Contact</a>
     </nav>
   </div>
+  <button class="page-btn left-btn">
+    <img src="images/arrow.png" alt="">
+  </button>
+
+  <button class="page-btn left-btn">
+    <img src="images/arrow.png" alt="">
+  </button>
+
+  <div class="progress-wrapper">
+    <div class="progress">
+      <h2>1/5</h2>
+    </div>
+    <div class="circle-wrapper">
+      <div class="circle circle-1"></div>
+      <div class="circle circle-2"></div>
+      <div class="circle circle-3"></div>
+      <div class="circle circle-4"></div>
+      <div class="circle circle-5"></div>
+    </div>
+  </div>
+
   <div class="wrapper">
     <section class="section-1">
       <div class="section-wrapper section-1-wrapper">
