--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <li>Join our mailing list</li>
             </ul>
             <p class="copyright">
-              Copyright &copy; CodeAndCreate. All Rights Reserved
+              Copyright &copy; Rokas Rudzianskas. All Rights Reserved
             </p>
           </div>
         </section>
